@@ -1,0 +1,6 @@
+-- example script that demonstrates adding a random
+-- 10-50ms delay before each request
+
+function delay()
+   return math.random(10, 50)
+end
