@@ -51,6 +51,7 @@ typedef struct connection {
     } state;
     int fd;
     SSL *ssl;
+    bool delayed;
     uint64_t start;
     char *request;
     size_t length;
